styles/globals.css
body {
    --black: #000000;
    --ash-black: #222;
    --white: #fafafa;
    --sky: #00ccff;
    --green: #22dddd;
    --blue: #1300ff;
    --dusk: #6600ff;
    --purple: #9900ff;
    --pink: #ff0066;
    --red: #fd002e;
    --orange: #fd7702;
    --yellow: #ffbb00;
    --neon-purple: #4952ff;
    --green: #16bb00;

    --background: var(--black);
    --accent: var(--white);

    margin: 0;
    padding: 0;
    background-color: var(--background);
    color: var(--accent);
}

* {
    font-family: sofia-pro, sans-serif;
    font-weight: 400;
    font-style: normal;
    -webkit-font-smoothing: antialiased;
}

a {
    color: inherit;
}

h1,
h2,
h3 {
    font-family: sofia-pro, sans-serif;
    font-weight: 600;
    font-style: normal;
}

h1 {
    font-size: 36px;
    font-weight: 700;
    letter-spacing: -1px;
    line-height: 1.2;
    text-align: center;
}

h2 {
    font-weight: 400;
}

p {
    margin: 0 0 30px 0;
    font-size: 18px;
}

img,
video {
    max-width: 100%;
    height: auto;
    display: block;
    margin: 0 auto;
}

iframe {
    max-width: 100%;
    display: block;
    margin: 0 auto;
}

footer {
    position: fixed;
    bottom: 0;
    left: 0;
    right: 0;
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 10px;
    background-image: radial-gradient(
        rgba(0, 0, 0, 0) 1px,
        var(--background) 1px
    );
    background-size: 4px 4px;
    backdrop-filter: blur(3px);
    -webkit-backdrop-filter: blur(3px);
    -moz-backdrop-filter: blur(3px);
    font-size: 14px;
    line-height: 14px;
}

footer::before {
    display: block;
    content: "";
    position: absolute;
    top: -1px;
    left: 0;
    right: 0;
    height: 1px;
    background: var(--accent);
    opacity: 0.2;
}

footer svg {
    margin-right: 20px;
}

footer a {
    text-decoration: none;
    color: var(--accent);
}

code {
    font-family: input-mono, monospace;
    font-weight: 400;
    font-style: normal;
}

::-webkit-scrollbar {
    height: 5px;
    width: 5px;
    background: var(--background);
}

::-webkit-scrollbar-thumb {
    background: var(--accent);
    -webkit-border-radius: 1ex;
}

::-webkit-scrollbar-corner {
    background: var(--background);
}

html {
    scroll-snap-type: y mandatory;
}

section {
    height: 100vh;
    display: flex;
    justify-content: center;
    align-items: center;
    position: relative;
    scroll-snap-align: center;
    perspective: 500px;
}

section > div {
    width: 300px;
    height: 400px;
    position: relative;
    max-height: 90vh;
    margin: 20px;
    background: var(--black);
    overflow: hidden;
}

article {
    max-width: 800px;
    padding: 20px;
    margin: 0 auto;
    margin-bottom: 24px;
}

.progress {
    position: fixed;
    left: 0;
    right: 0;
    height: 5px;
    background: var(--accent);
    bottom: 100px;
}

.progress-bar {
    position: fixed;
    top: 0;
    left: 0;
    right: 0;
    height: 6px;
    background: var(--neon-purple);
    transform-origin: 0%;
}

.projects-title-div {
    display: flex;
    flex-direction: column;
}

/*.projects-image {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
}*/

.header {
    display: flex;
    justify-content: center;
    align-items: flex-start;
    flex-direction: column;
    height: 50vh;
    margin-left: 5%;
    overflow: hidden;
    max-width: 900px;
}

.welcome-message {
    font-size: 2em;
    margin-top: 10%;
    font-weight: bold;
    margin-bottom: 0.5em;
    text-shadow: rgb(243 223 144 / 73%) 2px 2px 20px;
    color: rgb(255 204 0 / 88%);
}

button {
    border-radius: 8px;
    border: 1px solid transparent;
    padding: 0.6em 1.2em;
    font-size: 1em;
    font-weight: 500;
    font-family: inherit;
    background-color: #1a1a1a;
    cursor: pointer;
    transition: border-color 0.25s;
    margin: 0 8px;
}

button:hover {
    border-color: #646cff;
}

button:focus,
button:focus-visible {
    outline: 4px auto -webkit-focus-ring-color;
}

.navigation-bar button {
    font-size: 0.8em;
    font-weight: bolder;
    font-family: Verdana, Geneva, Tahoma, sans-serif;
    color: whitesmoke;
    text-shadow: rgba(255, 204, 0, 0.476) 1px 0 6px;
}

#tsparticles {
    position: relative;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    z-index: 0;
}

/* About Me Section */

.profile-picture {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;

    padding: 1rem 1rem;
}

hr {
    border: 0;
    height: 0;
    border-top: 1px solid rgba(0, 0, 0, 0.1);
    border-bottom: 1px solid rgba(255, 255, 255, 0.3);
}

.profile-picture .my-image {
    object-fit: cover;
    width: 150px;
    height: 150px;
    border-radius: 50%;
    overflow: hidden;

    display: flex;
    margin: 8px;
}

.icons {
    margin-top: 1rem;
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;

    gap: 1rem;
    font-size: 2rem;
}

.icons a {
    color: #fff; /* adjust to match your theme */
}

.icons a:hover {
    color: #ccc; /* adjust to match your theme */
}

.icons a:focus {
    outline: none;
}

.icons a:active {
    transform: translateY(2px); /* adjust to match your preference */
}

.navigation-bar {
    position: relative;
    top: 0;
    left: 0;
    right: 0;
    display: flex;
    justify-content: flex-end;
    align-items: center;
    padding: 10px;
    background-image: radial-gradient(
        rgba(0, 0, 0, 0) 1px,
        var(--background) 1px
    );
    background-size: 4px 4px;
    backdrop-filter: blur(3px);
    -webkit-backdrop-filter: blur(3px);
    -moz-backdrop-filter: blur(3px);
    font-size: 14px;
    line-height: 14px;
    z-index: 1;
}

@media screen and (max-width: 600px) {
    .navigation-bar {
        justify-content: center;
        font-size: 12px;
        line-height: 12px;
    }
}

.navigation-bar::before {
    display: block;
    content: "";
    position: absolute;
    bottom: -1px;
    left: 0;
    right: 0;
    height: 1px;
    background: var(--accent);
    opacity: 0.2;
}

